<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/title"
            android:textAppearance="@style/StyleNico_BigTitle"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/quiz"
            android:textAppearance="@style/StyleNico_NormalItems"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:background="@color/white"
            android:hint="@string/innot"
            android:textAppearance="@style/StyleNico_NormalLetterHint"
            android:inputType="numberDecimal"
            android:id="@+id/etquiz"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Expo"
            android:textAppearance="@style/StyleNico_NormalItems"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:background="@color/white"
            android:hint="@string/innot"
            android:textAppearance="@style/StyleNico_NormalLetterHint"
            android:inputType="numberDecimal"
            android:id="@+id/etexp"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Lab"
            android:textAppearance="@style/StyleNico_NormalItems"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:background="@color/white"
            android:hint="@string/innot"
            android:textAppearance="@style/StyleNico_NormalLetterHint"
            android:inputType="numberDecimal"
            android:id="@+id/etlab"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Pro"
            android:textAppearance="@style/StyleNico_NormalItems"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:background="@color/white"
            android:hint="@string/innot"
            android:textAppearance="@style/StyleNico_NormalLetterHint"
            android:inputType="numberDecimal"
            android:id="@+id/etpro"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/wheat"
            android:text="@string/def"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:onClick="doOperation"
            android:id="@+id/bCalcu"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/def"
            android:textAppearance="@style/StyleNico_NormalResult"
            android:id="@+id/tvResult"/>

        </LinearLayout>
</LinearLayout>
